# debugir

./: .gitignore  CMakeLists.txt  DebugIR.cpp  DebugIR.h  Main.cpp  README.md
.github/workflows/: tests.yml
include/debugir/: DebugIR.h
tests/: hello.c  hello.dbg.ll  hello.ll
